--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: storage_space
 description: Get the free, available and total storage space for the device. Utility helpers for readable sizes
-version: 1.0.0+2
+version: 1.0.1
 homepage: https://github.com/oodavid/storage_space
 repository: https://github.com/oodavid/storage_space
 
